# streamgrid-runtime

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
applications/: README.md
applications/adsb/: README.md  cpr_local.go  crc.go  crc_test.go  decoder.go  decoder_test.go  feed.go  realdata_test.go
applications/ais/: README.md  crc_test.go  decoder.go  decoder_test.go  feed.go  offsets_test.go  realdata_test.go  state_test.go
applications/digital-twin/: README.md
applications/plantops/: README.md
backend/: README.md
benchmarks/: README.md  benchmark.go  benchmark_test.go  protocol_bench_test.go
benchmarks/datasets/: README.md
benchmarks/replay/: README.md  replay.go  replay_test.go
benchmarks/results/: README.md
compute/: Cargo.toml  README.md
compute/benches/: spatial_index.rs
compute/src/: lib.rs
docs/: README.md
docs/adr/: ADR-001-language-choices.md  ADR-002-binary-transport-format.md  ADR-003-entity-model-design.md  README.md  TEMPLATE.md
docs/architecture/: README.md  entity-model.md  protocol-spec.md
docs/papers/: README.md
docs/research/: README.md  (+4 more)
edge/: README.md  integration_test.go  pipeline.go  pipeline_test.go  scaling_test.go  server.go  server_test.go
examples/: README.md
generator/: README.md  generator.go  generator_test.go
protocol/: Cargo.toml  README.md
protocol/benches/: encode_decode.rs
protocol/src/: lib.rs
renderer/: README.md
scripts/: README.md  run_benchmarks.sh
tools/: README.md
web/: README.md  index.html  package.json  tsconfig.json
(+6 files in other folders)
