[workspace]
resolver = "2"
members = [
    "protocol",
    "compute",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/streamgrid/streamgrid"

[workspace.dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }
bytemuck = { version = "1.21", features = ["derive"] }
